@@ -1,4 +1,9 @@
+AUX 0.120a/dipports113.patch 1059 RMD160 1256a74977f5a07ce3e3a7fe07931bbc32c72ff5 SHA1 7e5fa5a71fa27298a12942c7beb3f8003fa3285e SHA256 140aa2107a048d5ff54c0a3e1a1572930ec4f78fa1b17aff52862d4190e419b8
+AUX 0.120a/inpview12-120.patch 13689 RMD160 6cfa9a0cf47d91408a71a450e37a0247c1ebe44c SHA1 85afdb48e2a5347dc30597ef379e41c00754c444 SHA256 5423f6870922549093a5df1293c938157ea0f278032f09ae898e202c9cde072c
+AUX 0.120a/wolf120.patch 7577 RMD160 56abcf9e1070a945c5ba46020866d37eb86c2837 SHA1 fc65f762f1fbb28c826781e200b3c40507a806b5 SHA256 76b1ea8932037b7f4def5208c75e459d7c1f3828b0e5622838e187e3fa8ba07f
 DIST sdlmame0119u4.zip 15894278 RMD160 b425374573d0f72d4fa4fe4b25f420cad39dbc54 SHA1 c9a17e9b61fea93e7156868975980da177567928 SHA256 55f8279f4c56aa8771267ccd89e4bd7c21e802b3085dff421b089c2771474b4a
+DIST sdlmame0120a.zip 15890590 RMD160 a995a0b5ed245148b7fb105944a8957e7a25b7b4 SHA1 9f0fb24f196e068ac8be2c3e81181f7707dac700 SHA256 024f053996f94755e3bcc99e0fdef54d10d846419ec42750ab2770d9f8c837b6
 EBUILD sdlmame-0.119_p4.ebuild 2685 RMD160 f131ecec489b66e3637c3e1f3980a85175cb8695 SHA1 4a6112abe5add5b12a02403e7576082a468eb59d SHA256 fd8e751bd73c52225428751d1bc16f358d7be497c9f9e59e2409ce230fd65b65
-MISC ChangeLog 350 RMD160 4c0342748c2e90da8be3ad0805ba06965f23e9bd SHA1 b0769b1539bb0f67513c7e3d4188f04c746f7729 SHA256 70a70768aaf4fd74584b3cc8250013e92888d8b8cc9115b9087416509be3db23
+EBUILD sdlmame-0.120a.ebuild 2792 RMD160 5354711b159a4cbf4708e6ad6265b1cb469eb849 SHA1 e2d0cde85a524153c852729b163b2c8125e4cb0d SHA256 d41ff7c8bc103382722094958f54f645825526214ed840e07f64f01cb0b358cb
+MISC ChangeLog 489 RMD160 00238b45a42e6cf1b6a45a4c3096335d5fa17bcb SHA1 5736930c5f73acbd40d886ed83d26b7ac6514006 SHA256 837cb6333686dd9cf813f89455674ae10993cf7752f59fead48f1a2f7b6e5422
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
