@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Oct 2007; Tiago Pierezan Camargo (camargo) <tcamargo@gmail.com>
+  +sdlmame-0.120a.ebuild:
+  Version bump, Applying Wolfmame patches.
+
   13 Oct 2007; Dawid Węgliński <cla@gentoo.org> sdlmame-0.119_p4.ebuild:
   Quotes
 
